height fixed and checked overflow-y

--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
 }
 
 #left-section.col-4 {
-  height: 90vh;
+  height: 95vh;
 }
 
 #right-section.col-8 {
-  height: 90vh;
+  height: 95vh;
   background-image: url(".././img/mine.jpg");
 }
 
@@ -44,7 +44,7 @@ i.fa-bell-slash {
 }
 
 #contacts {
-  height: calc(90vh - 21vh - 45px);
+  height: calc(95vh - 21vh - 45px);
   overflow-y: scroll;
 }
 
@@ -53,7 +53,7 @@ i.fa-bell-slash {
 }
 
 #right-section main {
-  height: calc(90vh - 10vh - 50px);
+  height: calc(95vh - 10vh - 50px);
   overflow-y: scroll;
 }
 
@@ -86,4 +86,8 @@ header .fas {
 
 .message {
   border-radius: 15px;
+}
+
+.message span.d-block {
+  color: #b6bfbb;
 }
